Fix numpad buttons numbers align

--- a/sass/blocks/_boss-modal-window.sass
+++ b/sass/blocks/_boss-modal-window.sass
@@ -452,13 +452,9 @@ $block: ".boss-modal-window"
 
   // $Modal window numpad button
   &__numpad-button
-    +text-normalizer()
     flex-grow: 0
     flex-shrink: 0
-    display: flex
-    flex-direction: row
-    justify-content: center
-    align-items: center
+    display: block
     width: 113px
     height: 80px
     padding: 0
